--- a/app/utils/chrome/emoji/popup.html
+++ b/app/utils/chrome/emoji/popup.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <title>ChatGPT Emoji Converter</title>
-  <script src="popup.js"></script>
 </head>
 <body>
-  <button id="convert">convert to Emoji</button>
+  <h1>ChatGPT Emoji Converter</h1>
+  <div id="emoji_output"></div>
+  <script src="popup.js"></script>
 </body>
 </html>
